Codex/merge dev xuyuchen main (#27)
* feat(wal): 实现异步 WAL 写入器和性能基准测试

- 添加 AsyncWalWriter 类实现异步写入和批量提交功能
- 实现严格 RingBuffer 机制防止数据覆盖确保数据不丢失
- 添加 Group Commit 机制通过批量 fsync 提升写入性能
- 集成 Checkpoint 管理器支持持久化位置追踪
- 添加 P0 修复解决刷盘序列号追踪和严格阻塞模式问题
- 实现 V0.3 第一性原理性能测试套件验证系统稳定性
- 添加吞吐量、容量、延迟三项核心指标测试功能
- 集成 ShardedWalEngine 和集群配置相关测试代码
- 配置 .gitignore 文件忽略编译产物和临时文件

* test(engine): 添加性能基准测试和集成测试

- 实现 Loomq V0.3 第一性原理性能测试，包含吞吐量、容量、延迟测试
- 添加完整的集成测试验证任务创建、取消、恢复等功能
- 新增 V0.2 引擎集成测试覆盖时间桶调度和批量处理场景
- 配置 GitHub Actions 工作流支持平衡测试、打包和完整回归测试
- 更新 .gitignore 文件排除 AGENTS.md 和 CLAUDE.md 文档文件

* test(v4): 添加 V0.4 验收测试和性能基准测试

- 实现 AC-05 并发创建幂等性验证，包括多线程并发创建相同幂等键的测试
- 实现 AC-06 恢复后状态一致性验证，涵盖 WAL 重放和各种状态恢复场景
- 实现 AC-07 RUNNING 任务重新执行验证，测试崩溃恢复后的状态重置
- 添加 V0.3 第一性原理性能测试，包含吞吐量、容量和延迟分布测试
- 添加 V0.4 极限性能压测，覆盖任务创建、查询、状态转换等核心功能
- 实现多轮次渐进加压测试，找出系统性能峰值和崩溃点
- 添加内存占用测试，验证不同规模下的每任务内存消耗
- 实现延迟百分位统计，确保 P99 延迟在可接受范围内

* feat(test): 添加V0.4验收测试和极限性能压测

- 实现AcceptanceTest包含AC-05并发创建幂等、AC-06恢复后状态一致、AC-07RUNNING任务重新执行测试
- 添加AsyncWalWriter异步WAL写入器实现支持高吞吐量写入和批量提交
- 创建BenchmarkV4性能压测套件涵盖任务创建、查询、状态转换、幂等查询和内存占用测试
- 集成RingBuffer和Group Commit机制提升WAL写入性能
- 实现严格的DURABLE语义保证数据持久化安全

* feat(benchmark): V0.4.5

- 实现了完整的基准测试框架，包含预热、多轮执行、统计分析等功能
- 添加了延迟记录器、吞吐量计时器等核心组件
- 集成了GC监控和环境信息收集功能
- 支持生成Markdown、CSV、JSON多种格式的测试报告
- 添加了可信度评估机制，基于变异系数和异常值检测
- 创建了.dockerignore文件用于容器构建优化
- 添加了.env.example环境配置模板文件
- 配置了application.yml应用参数和服务器设置

* feat(wal): 实现异步 WAL 写入器和性能基准测试

- 添加 AsyncWalWriter 类实现异步写入和批量提交功能
- 实现严格 RingBuffer 机制防止数据覆盖确保数据不丢失
- 添加 Group Commit 机制通过批量 fsync 提升写入性能
- 集成 Checkpoint 管理器支持持久化位置追踪
- 添加 P0 修复解决刷盘序列号追踪和严格阻塞模式问题
- 实现 V0.3 第一性原理性能测试套件验证系统稳定性
- 添加吞吐量、容量、延迟三项核心指标测试功能
- 集成 ShardedWalEngine 和集群配置相关测试代码
- 配置 .gitignore 文件忽略编译产物和临时文件

* chore: remove orphaned v2 files that cause CI compilation errors

* chore: remove FailoverService that depends on deleted WalReplicator

* chore: remove obsolete v2/v3 test files that reference deleted classes

* feat(benchmark): V0.4.5

- 实现了完整的基准测试框架，包含预热、多轮执行、统计分析等功能
- 添加了延迟记录器、吞吐量计时器等核心组件
- 